# roman-converter

./: Taskfile.yml  compose.yaml  dockerfile  main.py  pyproject.toml  terraform.tfstate
.github/workflows/: pr.yaml
src/: postgresql_db.py  roman_api.py
src/api_roman.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
terraform/: main.tf  output.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variable.tf
tests/: test_some_test.py
